--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "lint": "eslint --fix --ext .vue src/",
     "lint-staged": "lint-staged",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\""
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
@@ -20,6 +21,7 @@
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
     "echarts": "^5.4.1",
+    "font-awesome": "^4.7.0",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "normalize.css": "^8.0.1",
@@ -28,7 +30,7 @@
     "qs": "^6.11.0",
     "vue": "^3.2.45",
     "vue-router": "4",
-    "wow.js": "^1.2.2"
+    "w.jswo": "^1.2.2"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
@@ -60,8 +62,9 @@
     "vue-tsc": "^1.0.24"
   },
   "lint-staged": {
-    "src/**/*.{js,ts,vue}": [
-      "eslint --fix --ext  .ts,.vue src"
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
     ]
   }
 }
